# lazyfmri

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml  python-publish.yml
doc/: Makefile  requirements.txt
doc/source/: conf.py  functionalities.rst  hrf_estimation.rst  index.rst  installation.rst  io.rst  links.rst  plotting.rst  preprocessing.rst
doc/source/classes/: dataset.rst  fitting.rst  glm.rst  index.rst  plotting.rst  preproc.rst  utils.rst
doc/source/nbs/: lazyfmri.ipynb
lazyfmri/: __init__.py  dataset.py  fitting.py  glm.py  plotting.py  preproc.py  utils.py
lazyfmri/data/: sub-01_ses-1_task-SRF_events.tsv
lazyfmri/notebooks/: example.ipynb
lazyplot/: __init__.py  dataset.py  fitting.py  glm.py  plotting.py  preproc.py  utils.py  version.py
lazyplot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: example.ipynb
test/: test.ipynb
tests/: test_import.py
