[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazyplot"
version = "0.1.0" # Replace this with the value dynamically loaded by `get_version`
description = "LazyPlot: seaborn wrapper for plotting"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Jurjen Heij", email = "jurjenheij@gmail.com" }]
maintainers = [{ name = "Jurjen Heij", email = "jurjenheij@gmail.com" }]
keywords = ["seaborn", "visualization", "neuroimaging", "plotting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GPL-v3 License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.7, <3.11"
dependencies = [
    "matplotlib",
    "numpy",
    "typing",
    "seaborn",
    "nilearn",
    "lmfit",
    "nideconv @ git+https://github.com/gjheij/nideconv.git",
    "scikit-learn",
    "pingouin",
    "nitime",
    "niworkflows",
    "shapely",
    "pillow",
    "alive_progress",
    "ipython",
    "ipykernel",
    "pandas>=1.5.0,<1.6",
]


[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools]
packages = ["lazyplot"]
package-data = { lazyplot = ["version.py"] }
