[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazyfmri"
dynamc = ["version"]
readme = "README.md"
description = "lazyfmri: seaborn wrapper for plotting & HRF fitting procedures"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Jurjen Heij", email = "jurjenheij@gmail.com" }]
maintainers = [{ name = "Jurjen Heij", email = "jurjenheij@gmail.com" }]
keywords = ["seaborn", "visualization", "neuroimaging", "plotting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
# requires-python = ">=3.7, <3.11"
dependencies = [
    "matplotlib",
    "numpy",
    "typing",
    "seaborn",
    "nilearn",
    "lmfit",
    "nideconv @ git+https://github.com/VU-Cog-Sci/nideconv",
    "scikit-learn",
    "pingouin",
    "nitime",
    "shapely",
    "pillow",
    "alive_progress",
    "ipython",
    "ipykernel",
    # "numpy>=1.20,<1.24",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools_scm]
write_to = "lazyfmri/version.py"

[tool.setuptools.packages.find]
include = ["lazyfmri*"]

[tool.setuptools.package-data]
lazyfmri = ["version.py", "data/*", "notebook/*", "misc/*"]
